--- a/src/wireworld/gui/WireworldWindow.form
+++ b/src/wireworld/gui/WireworldWindow.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="21" width="707" height="408"/>
+      <xy x="74" y="15" width="638" height="408"/>
     </constraints>
     <properties>
       <background color="-264496"/>
@@ -20,6 +20,7 @@
         </constraints>
         <properties>
           <background color="-3881788"/>
+          <font name=".AppleSystemUIFontMonospaced" size="18"/>
           <foreground color="-41984"/>
           <text value="Start"/>
         </properties>
@@ -31,6 +32,7 @@
           </grid>
         </constraints>
         <properties>
+          <font name=".AppleSystemUIFontMonospaced" size="24" style="1"/>
           <foreground color="-41984"/>
           <horizontalAlignment value="0"/>
           <text value="Wireworld"/>
@@ -41,9 +43,10 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name=".AppleSystemUIFontMonospaced" size="12"/>
           <foreground color="-41984"/>
           <horizontalAlignment value="0"/>
-          <text value="Number of iteration"/>
+          <text value="Number of iteration:"/>
         </properties>
       </component>
       <component id="1ccf7" class="javax.swing.JLabel" binding="pathText">
@@ -54,9 +57,10 @@
         </constraints>
         <properties>
           <enabled value="true"/>
+          <font name=".AppleSystemUIFontMonospaced" size="12"/>
           <foreground color="-41984"/>
           <horizontalAlignment value="0"/>
-          <text value="Path to File"/>
+          <text value="Path to File:"/>
           <verticalAlignment value="0"/>
         </properties>
       </component>
@@ -79,6 +83,8 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-15252037"/>
+          <font name=".AppleSystemUIFontMonospaced" size="8"/>
           <requestFocusEnabled value="true"/>
           <text value="Realized by Michal Biliński and Yana Sviatsilnikava for  Jimp2 "/>
         </properties>
