--- a/src/wireworld/gui/WireworldWindow.form
+++ b/src/wireworld/gui/WireworldWindow.form
@@ -15,7 +15,7 @@
       <component id="7b3ee" class="javax.swing.JButton" binding="startButton">
         <constraints>
           <grid row="0" column="1" row-span="3" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="195" height="30"/>
+            <preferred-size width="241" height="30"/>
           </grid>
         </constraints>
         <properties>
@@ -28,7 +28,7 @@
       <component id="f2ba8" class="javax.swing.JLabel" binding="nameText">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="195" height="98"/>
+            <preferred-size width="241" height="98"/>
           </grid>
         </constraints>
         <properties>
@@ -80,7 +80,9 @@
       </component>
       <component id="b71c1" class="javax.swing.JLabel" binding="infoText">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="241" height="10"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-15252037"/>
