--- a/src/wireworld/gui/WireworldWindow.form
+++ b/src/wireworld/gui/WireworldWindow.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="10" bottom="0" right="10"/>
     <constraints>
-      <xy x="74" y="15" width="638" height="408"/>
+      <xy x="74" y="15" width="656" height="408"/>
     </constraints>
     <properties>
       <background color="-264496"/>
@@ -62,7 +62,7 @@
           <text value="Realized by Michal Biliński and Yana Sviatsilnikava for  Jimp2 "/>
         </properties>
       </component>
-      <component id="fb55a" class="javax.swing.JFormattedTextField" binding="NumberField">
+      <component id="fb55a" class="javax.swing.JFormattedTextField" binding="numberField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -75,7 +75,7 @@
           <horizontalAlignment value="2"/>
           <selectedTextColor color="-1710619"/>
           <selectionColor color="-1710619"/>
-          <text value="..."/>
+          <text value=""/>
         </properties>
       </component>
       <component id="5260" class="javax.swing.JButton" binding="pathButton">
@@ -89,7 +89,7 @@
           <enabled value="true"/>
           <foreground color="-15252037"/>
           <horizontalAlignment value="2"/>
-          <text value="..."/>
+          <text value=""/>
         </properties>
       </component>
       <component id="1ccf7" class="javax.swing.JLabel" binding="pathText">
