--- a/src/wireworld/gui/WireworldWindow.form
+++ b/src/wireworld/gui/WireworldWindow.form
@@ -62,22 +62,6 @@
           <text value="Realized by Michal Biliński and Yana Sviatsilnikava for  Jimp2 "/>
         </properties>
       </component>
-      <component id="fb55a" class="javax.swing.JFormattedTextField" binding="numberField">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <caretColor color="-3881788"/>
-          <disabledTextColor color="-3881788"/>
-          <foreground color="-15252037"/>
-          <horizontalAlignment value="2"/>
-          <selectedTextColor color="-1710619"/>
-          <selectionColor color="-1710619"/>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="5260" class="javax.swing.JButton" binding="pathButton">
         <constraints>
           <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false">
@@ -106,6 +90,14 @@
           <text value="Path to File:"/>
           <verticalAlignment value="0"/>
         </properties>
+      </component>
+      <component id="eeef3" class="javax.swing.JTextField" binding="numberField">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
