--- a/src/wireworld/gui/SecondWindow.form
+++ b/src/wireworld/gui/SecondWindow.form
@@ -19,7 +19,7 @@
           <enabled value="true"/>
           <font name=".AppleSystemUIFontMonospaced" size="14"/>
           <foreground color="-15252037"/>
-          <text value="Next step"/>
+          <text value="Resume"/>
         </properties>
       </component>
       <component id="35268" class="javax.swing.JButton" binding="downloadButton" default-binding="true">
@@ -32,7 +32,7 @@
           <font name=".AppleSystemUIFontMonospaced"/>
           <foreground color="-15252037"/>
           <hideActionText value="false"/>
-          <text value="Download"/>
+          <text value="Save"/>
         </properties>
       </component>
       <component id="d72f8" class="javax.swing.JButton" binding="goBackButton" default-binding="true">
@@ -50,7 +50,7 @@
       <grid id="ec6eb" binding="board" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="2" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="2" col-span="2" vsize-policy="3" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="400" height="400"/>
           </grid>
         </constraints>
